# outlooklib

./: .env.example  .gitignore  Cargo.toml  DEV.md  README.md  pyproject.toml
.github/workflows/: CI.yml  python-wheel.yml
old_python/: outlook.py
outlooklib/: __init__.py  __main__.py  models.py  outlook.py  print_me_funcs.py
scripts/: run_print_me.py
src/: lib.rs  main.rs  models.rs  python_bindings.rs
tests/: test_live_graph.py  test_smoke.py
