[package]
name = "outlooklib"
version = "0.1.8"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
pyo3 = { version = "0.23", optional = true, features = ["abi3-py310", "extension-module"] }
